my-apps/utility/vert/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vert
  namespace: vert
  labels:
    app.kubernetes.io/name: vert
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: vert
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: vert
    spec:
      containers:
        - name: vert
          image: ghcr.io/vert-sh/vert:latest@sha256:c604d357e44dce6020391b6bd8d20e4f5d35e3778ecf58bbccbd8fdc6792eaf4
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 512Mi
